--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
         <!-- <li *ngFor="let item of todos" [ngClass]="{completed: item.done}"> -->
         <div class="view">
           <input class="toggle" type="checkbox" [(ngModel)]="item.done">
-          <label>{{item.value}}</label>
+          <label>{{item.value | uppercase}}</label>
           <button class="destroy"></button>
         </div>
         <input class="edit" value="Create a TodoMVC template">
