任務 13：自訂 Pipe 元件 建立自訂的 MyFilter Pipe 元件，搭配 @Output 達成過濾清單的功能

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,13 +4,13 @@
   <!-- Remove this if you don't implement routing -->
   <ul class="filters">
     <li>
-      <a class="selected" href="#/">All</a>
+      <a [ngClass]="{'selected': selectedType=='all'}" (click)="selectTypeFromFooter('all')" href="#/">All</a>
     </li>
     <li>
-      <a href="#/active">Active</a>
+      <a [ngClass]="{'selected': selectedType=='active'}" (click)="selectTypeFromFooter('active')" href="#/active">Active</a>
     </li>
     <li>
-      <a href="#/completed">Completed</a>
+      <a [ngClass]="{'selected': selectedType=='completed'}" (click)="selectTypeFromFooter('completed')" href="#/completed">Completed</a>
     </li>
   </ul>
   <!-- Hidden if no completed items are left ↓ -->
